<resources>
    <string name="app_name">WeatherApp</string>
    <string name="activity_city_enter_valid_text">Enter a valid city</string>
    <string name="activity_city_done_button">Done</string>
    <string name="activity_city_hint_text">Insert the name here</string>
    <string name="splash_activity_powered_by">Powered By</string>
    <string name="splash_activity_dream_team">DREAM TEAM DE LAS SIERRAS</string>
    <string name="image">splash_activity_content_image</string>
    <string name="details_city_activity_name_of_city">City</string>
    <string name="details_city_activity_name_of_country">Country</string>
    <string name="details_activity_min_temp">min</string>
    <string name="details_activity_max_temp">max</string>
    <string name="details_activity_temp">30</string>
    <string name="text_details_activity_description">Sun</string>
    <string name="city_activity_search_text">searcher</string>
    <string name="text_view_details_activity_coma">,</string>
    <string name="details_activity_celsius">°C</string>
    <string name="details_activity_bar">/</string>
</resources>
