<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    tools:context=".activities.SplashScreenActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/splashimage"
        android:contentDescription="@string/image" />

    <TextView
        android:id="@+id/textViewTitleSplashActivity"
        style="@style/SplashScreenBottomText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_city"
        android:text="@string/app_name"
        android:textSize="@dimen/text_size_title_splash_activity"
        app:layout_constraintBottom_toTopOf="@+id/textViewPoweredSplashActivity"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.14" />

    <TextView
        android:id="@+id/textViewPoweredSplashActivity"
        style="@style/SplashScreenBottomText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/splash_activity_powered_by"
        app:layout_constraintBottom_toTopOf="@+id/textViewDreamTeamSplashActivity" />

    <TextView
        android:id="@+id/textViewDreamTeamSplashActivity"
        style="@style/SplashScreenBottomText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/splash_activity_dream_team"
        app:layout_constraintBottom_toBottomOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:indeterminateTint="@android:color/white"
        android:layout_marginBottom="@dimen/margin_bottom_splash_activity"
        app:layout_constraintBottom_toTopOf="@+id/textViewPoweredSplashActivity" />

</androidx.constraintlayout.widget.ConstraintLayout>