<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    tools:context=".activities.CityMainActivity">

    <ImageView
        android:id="@+id/city_activity_background"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/city_activity_background"
        app:layout_constraintBottom_toBottomOf="@+id/city_activity_search_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/city_activity_search_text_view"
        style="@style/CityActivityTextViewSearchEnd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/city_activity_search_text"
        app:layout_constraintBottom_toTopOf="@id/main_edit_text_country" />

    <TextView
        android:id="@+id/validCityTextView"
        style="@style/CityActivityMarginTextViewValidCityText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_city_enter_valid_text"
        app:layout_constraintBottom_toTopOf="@+id/main_edit_text_country"
        app:layout_constraintTop_toBottomOf="@+id/city_activity_search_text_view" />

    <AutoCompleteTextView
        android:id="@+id/main_edit_text_country"
        style="@style/AutoCompletableEndScene"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/buttonDone"
        app:layout_constraintTop_toBottomOf="@+id/validCityTextView" />

    <Button
        android:id="@+id/buttonDone"
        style="@style/CityActivityDoneButtonEndScene"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_city_done_button"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>